--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -3,7 +3,8 @@
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="/catalog" class="nav-link px-2 text-muted">Catalog</a></li>
-            <li class="nav-item"><a href="/cart" class="nav-link px-2 text-muted">Shopping cart</a></li>
+            <li class="nav-item"><a href="/car_park" class="nav-link px-2 text-muted">Car Park</a></li>
+            <li class="nav-item"><a href="/cart" class="nav-link px-2 text-muted">Order</a></li>
             <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
