--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,7 +7,8 @@
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="/catalog" class="nav-link px-2 link-dark">Catalog</a></li>
-            <li><a href="/cart" class="nav-link px-2 link-dark">Shopping cart</a></li>
+            <li><a href="/car_park" class="nav-link px-2 link-dark">Car Park</a></li>
+            <li><a href="/cart" class="nav-link px-2 link-dark">Order</a></li>
             <li><a href="/about" class="nav-link px-2 link-dark">About</a></li>
         </ul>
 
