--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -4,7 +4,7 @@
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="/catalog" class="nav-link px-2 text-muted">Catalog</a></li>
             <li class="nav-item"><a href="/car_park" class="nav-link px-2 text-muted">Car Park</a></li>
-            <li class="nav-item"><a href="/cart" class="nav-link px-2 text-muted">Order</a></li>
+            <li class="nav-item"><a href="/order" class="nav-link px-2 text-muted">Order</a></li>
             <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
