Some fixes in templates

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -13,8 +13,8 @@
         </ul>
 
         <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Sign-in</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
+            <a type="button" class="btn btn-outline-dark me-2">Sign-in</a>
+            <a type="button" class="btn btn-dark">Sign-up</a>
         </div>
     </header>
 </div>
