--- a/src/main/resources/templates/add_service.html
+++ b/src/main/resources/templates/add_service.html
@@ -1,14 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Order</title>
+    <title>Catalog</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 
-<p th:text="'The page named ' + ${title} + '!'" />
+<div class="container mt-5">
+    <h1>Добавление новой услуги</h1>
+
+</div>
 
 <div th:insert="blocks/footer :: footer"></div>
 </body>
