--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+    <title>Catalog</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
@@ -9,11 +9,16 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5">
-    <h1>Каталог услуг</h1>
+    <h1>Service catalog</h1>
+
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-end">
+        <a href="/catalog/add_service" class="btn btn-outline-dark btn-lg px-4 gap-3">Add new service</a>
+    </div>
+
     <div th:each="service : ${services}" class="alert alert-info mt-2">
         <h2 th:text="${service.name}"/>
         <p th:text="${service.description}"/>
-        <h3 th:text="${service.min_price}"/>
+        <h3 th:text="'Цена от ' + ${service.min_price} + 'р'"/>
     </div>
 </div>
 
