New page Orders. New model Car for Car Park page

--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -6,6 +6,7 @@
             <li class="nav-item"><a href="/car_park" class="nav-link px-2 text-muted">Car Park</a></li>
             <li class="nav-item"><a href="/order" class="nav-link px-2 text-muted">Order</a></li>
             <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
+            <li class="nav-item"><a href="/orders" class="nav-link px-2 text-muted">Orders</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
     </footer>
