--- a/src/main/resources/templates/add_service.html
+++ b/src/main/resources/templates/add_service.html
@@ -9,7 +9,7 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5 mb-5">
-    <h1>Добавление новой услуги</h1>
+    <h1>Adding a new service</h1>
     <form action="/catalog/add_service" method="post">
         <input type="text" name="name" placeholder="Enter name of service" class="form-control"><br>
         <textarea name="description" placeholder="Enter description of service" class="form-control"></textarea><br>
