--- a/src/main/resources/templates/car_park.html
+++ b/src/main/resources/templates/car_park.html
@@ -8,7 +8,21 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 
-<p th:text="'The page named ' + ${title} + '!'" />
+<div class="container mt-5">
+  <h1>Car Park</h1>
+
+  <div class="d-grid gap-2 d-sm-flex justify-content-sm-end">
+    <a href="/car_park/add_car" class="btn btn-outline-dark btn-lg px-4 gap-3">Add new car</a>
+  </div>
+
+  <div th:each="car : ${cars}" class="alert alert-info mt-2">
+    <h2 th:text="${car.name}"/>
+    <p th:text="${car.description}"/>
+    <h3 th:text="'Длина грузов до ' + ${car.max_length} + 'м'"/>
+    <h3 th:text="'Цена от ' + ${car.min_price} + 'р'"/>
+    <a th:href="'/order/' + ${car.id}" class="btn btn-primary">Order car</a>
+  </div>
+</div>
 
 <div th:insert="blocks/footer :: footer"></div>
 </body>
