Work with Spring Security

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -10,11 +10,11 @@
             <li><a href="/car_park" class="nav-link px-2 link-dark">Car Park</a></li>
             <li><a href="/order" class="nav-link px-2 link-dark">Order</a></li>
             <li><a href="/about" class="nav-link px-2 link-dark">About</a></li>
-            <li><a href="/orders" class="nav-link px-2 link-dark">Orders</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
-            <a type="button" class="btn btn-outline-dark me-2">Sign-in</a>
+            <a href="/login" type="button" class="btn btn-outline-dark me-2">Sign-in</a>
+            <a href="/logout" type="button" class="btn btn-outline-dark me-2">Sign-out</a>
             <a type="button" class="btn btn-dark">Sign-up</a>
         </div>
     </header>
