--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -7,6 +7,7 @@
             <li class="nav-item"><a href="/order" class="nav-link px-2 text-muted">Order</a></li>
             <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
             <li class="nav-item"><a href="/orders" class="nav-link px-2 text-muted">Orders</a></li>
+            <li class="nav-item"><a href="/manager_registration" class="nav-link px-2 text-muted">Manager Registration</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
     </footer>
