Work with Spring Security continues

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -15,7 +15,7 @@
         <div class="col-md-3 text-end">
             <a href="/login" type="button" class="btn btn-outline-dark me-2">Sign-in</a>
             <a href="/logout" type="button" class="btn btn-outline-dark me-2">Sign-out</a>
-            <a type="button" class="btn btn-dark">Sign-up</a>
+            <a href="/registration" type="button" class="btn btn-dark">Sign-up</a>
         </div>
     </header>
 </div>
