--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -9,20 +9,29 @@
 <div class="container">
   <form class="form-signin w-50 m-auto" method="post" action="/registration" th:modelAttribute="userForm">
     <h2 class="form-signin-heading">Please sign up</h2>
-    <div class="alert alert-danger" role="alert" th:text="${Error}"/>
+
+    <div th:switch="${error}">
+      <p th:case="null"/>
+      <p class="alert alert-danger" role="alert" th:case="*" th:text="${error}" />
+    </div>
+
     <p>
-      <label for="username" class="sr-only">Username</label>
       <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
     </p>
     <p>
-      <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
     </p>
     <p>
-      <label for="passConfirm" class="sr-only">Confirm password</label>
       <input type="password" id="passConfirm" name="passConfirm" class="form-control" placeholder="Confirm password" required="">
     </p>
+    <p>
+      <input type="text" id="email" name="email" class="form-control" placeholder="Email" required="">
+    </p>
+    <p>
+      <input type="text" id="telNumber" name="telNumber" class="form-control" placeholder="Telephone number" required="">
+    </p>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+
   </form>
 </div>
 </body>
