Some edits to display features for different roles

--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -4,10 +4,10 @@
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="/catalog" class="nav-link px-2 text-muted">Catalog</a></li>
             <li class="nav-item"><a href="/car_park" class="nav-link px-2 text-muted">Car Park</a></li>
-            <li class="nav-item"><a href="/order" class="nav-link px-2 text-muted">Order</a></li>
             <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">About</a></li>
-            <li class="nav-item"><a href="/orders" class="nav-link px-2 text-muted">Orders</a></li>
-            <li class="nav-item"><a href="/manager_registration" class="nav-link px-2 text-muted">Manager Registration</a></li>
+            <li class="nav-item" ><a th:if="${user != null}" href="/order" class="nav-link px-2 text-muted">Order</a></li>
+            <li class="nav-item"><a th:if="${user != null && (user.isManager() || user.isAdmin())} ? ${true} : ${false}" href="/orders" class="nav-link px-2 text-muted">Orders</a></li>
+            <li class="nav-item"><a th:if="${user != null && user.isAdmin()} ? ${true} : ${false}" href="/manager_registration" class="nav-link px-2 text-muted">Manager Registration</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
     </footer>
