--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -18,7 +18,7 @@
     <div th:each="service : ${services}" class="alert alert-info mt-2">
         <h2 th:text="${service.name}"/>
         <p th:text="${service.description}"/>
-        <h3 th:text="'Цена от ' + ${service.min_price} + 'р'"/>
+        <h4 th:text="'Price from ' + ${service.min_price} + ' rubles'"/>
         <a th:href="'/order/' + ${service.id}" class="btn btn-primary">Order service</a>
     </div>
 </div>
