--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -8,7 +8,36 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 
-<p th:text="'The page named ' + ${title} + '!'" />
+<div class="container mt-5">
+  <h1>Orders</h1>
+
+  <div th:each="order : ${orders}" class="alert alert-info mt-2">
+    <h2 th:text="'Order id: ' + ${order.id}"/>
+    <p th:text="'Service: ' + ${order.service.name}"/>
+    <p th:text="'Car: ' + ${order.car.name}"/>
+    <p th:text="'Customer: ' + ${order.user.username}"/>
+    <p th:text="'Telephone number: ' + ${order.user.telNumber}"/>
+    <p th:text="'Email: ' + ${order.user.email}"/>
+    <p th:text="'Delivery from: ' + ${order.delivery_from}"/>
+    <p th:text="'Delivery to: ' + ${order.delivery_to}"/>
+
+    <div th:switch="${order.delivery_out_of_town}">
+      <p th:case="${true}" th:text="'Delivery out of town: yes'"/>
+      <p th:case="${false}" th:text="'Delivery out of town: no'"/>
+    </div>
+
+    <div th:switch="${order.oversized_delivery}">
+      <p th:case="${true}" th:text="'Oversized delivery: yes'"/>
+      <p th:case="${false}" th:text="'Oversized delivery: no'"/>
+    </div>
+
+    <p th:text="'Comment: ' + ${order.commentary}"/>
+    <p th:text="'Total price: ' + ${order.total_price}"/>
+
+    <a th:href="'/orders/' + ${order.id}" class="btn btn-primary">Done</a>
+  </div>
+
+</div>
 
 <div th:insert="blocks/footer :: footer"></div>
 </body>
