Fixed bugs with Order

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -39,9 +39,7 @@
 
         <textarea name="commentary" placeholder="Comment to the order" class="form-control mb-4"></textarea>
 
-        <input type="number" name="totalPrice" id="totalPrice" th:placeholder="1000" class="form-control mb-4" disabled>
-
-        <button type="submit" class="btn btn-outline-dark btn-lg px-4 gap-3">Valide purchase</button>
+        <button type="submit" class="btn btn-dark btn-lg px-4 gap-3">Continue</button>
     </form>
 </div>
 
