--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Car park</title>
+  <title>Orders</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
@@ -34,7 +34,7 @@
     <p th:text="'Comment: ' + ${order.commentary}"/>
     <p th:text="'Total price: ' + ${order.total_price}"/>
 
-    <a th:href="'/orders/' + ${order.id}" class="btn btn-primary">Done</a>
+    <a th:href="'/orders/' + ${order.id}" class="btn btn-primary">Completed</a>
   </div>
 
 </div>
