--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,10 +5,14 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
-<body class="text-center">
-<div class="container">
+<body>
+<header th:insert="blocks/header :: header"></header>
+
+<div class="container mt-5">
+
   <form class="form-signin w-50 m-auto" method="post" action="/registration" th:modelAttribute="userForm">
-    <h2 class="form-signin-heading">Please sign up</h2>
+
+    <h1>Please signup</h1>
 
     <div th:if="${error != null}">
       <p class="alert alert-danger" role="alert" th:text="${error}" />
@@ -29,9 +33,11 @@
     <p>
       <input type="text" id="telNumber" name="telNumber" class="form-control" placeholder="Telephone number" required="">
     </p>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-
+    <button class="btn btn-lg btn-dark btn-block" type="submit">Sign up</button>
   </form>
+
 </div>
+
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
