--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,18 +3,79 @@
 <head>
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="icon" type="image/png" th:href="@{/images/ico.png}" sizes="32x32">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <style>
+        .img-wrap h1 {
+            font-size: 40pt;
+            position: absolute;
+            top: 50%;
+            left: 10%;
+        }
+    </style>
 </head>
 <body>
+
 <header th:insert="blocks/header :: header"></header>
+
+<div class="img-wrap">
+    <img th:src="@{/images/header1.jpeg}"class="img-fluid">
+    <h1 class="featurette-heading fw-normal lh-1 text-white">Transport everything you need with Cargobob</h1>
+</div>
+
+
+<!--<img th:src="@{/images/header.jpeg}" class="img-fluid">
+
 
 <div th:switch="${user}">
     <p th:case="null" th:text="'Hello!'" />
     <p th:case="*" th:text="'Hello, ' + ${user.getRole()} + '!'" />
 </div>
+-->
 
-<p th:text="'The page named ' + ${title} + '!'" />
+<div class="container marketing mt-5">
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading fw-normal lh-1">Great variety of services</h2>
+            <p class="lead">In our company you can order the transportation of anything, from a small parcel to a large volume of various building materials.</p>
+            <a href="/catalog" type="button" class="btn btn-dark btn-lg">Catalog</a>
+        </div>
+        <div class="col-md-5">
+            <img th:src="@{/images/first.jpg}" alt="" width="500" height="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette text-end">
+        <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading fw-normal lh-1">Large car park</h2>
+            <p class="lead">We have a huge car park ranging from cars to trucks.</p>
+            <a href="/car_park" type="button" class="btn btn-dark btn-lg">Car Park</a>
+        </div>
+        <div class="col-md-5 order-md-1">
+            <img th:src="@{/images/second.jpg}" alt="" width="500" height="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette mb-5">
+        <div class="col-md-7">
+            <h2 class="featurette-heading fw-normal lh-1">Delivery Guarantee</h2>
+            <p class="lead">All drivers in our company are professionals. In addition, all transported cargo is insured.</p>
+            <a th:if="${user != null}" href="/order" class="btn btn-dark btn-lg">Make order</a>
+            <a th:if="${user == null}" href="/signin" class="btn btn-dark btn-lg">Make order</a>
+        </div>
+        <div class="col-md-5">
+            <img th:src="@{/images/third.jpg}" alt="" width="500" height="500" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto">
+        </div>
+    </div>
+
+</div>
 
 <div th:insert="blocks/footer :: footer"></div>
+
 </body>
 </html>
