--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,26 +2,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>Log in with your account</title>
+    <title>Sign in</title>
 </head>
 
-<body class="text-center">
-<main class="form-signin w-100 m-auto">
+<body class="container mt-5">
+<main class="form-signin w-50 m-auto">
     <form method="POST" action="/login">
-        <h1 class="h3 mb-3 fw-normal">Вход в систему</h1>
-        <div class="form_floating">
-            <input name="username" type="text" class="form-control" placeholder="Username"
-                   autofocus="true"/>
-        </div>
-        <div class="form_floating">
-            <input name="password" type="password" class="form-control" placeholder="Password"/>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Log In</button>
-        <div class="form_floating">
-            <a class="w-100 btn btn-warning btn-sm" href="/registration">Sign up</a>
-        </div>
+
+        <h1>Please sign in</h1>
+
+        <div>
+            <input name="username" type="text" class="form-control mb-4" placeholder="Username" autofocus="true"/>
+            <input name="password" type="password" class="form-control mb-4" placeholder="Password"/>
+
+            <button class="w-100 btn btn-lg btn-dark mb-4" type="submit">Sign In</button>
+
+            <a class="w-100 btn btn-outline-dark btn-sm" href="/registration">Sign up</a>
         </div>
     </form>
 </main>
